# anectos

./: .gitignore  Anchor.toml  Dockerfile  README.md  acts-token-info.json  package.json  txtx.yml
app/: Dockerfile  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AdminDashboard.tsx  ContributeWithNFT.tsx  DAOGovernance.tsx  DAOParticipation.tsx  LoginWithEmail.tsx  Navbar.tsx  PerformantNavbar.tsx  RoleBasedNavbar.tsx  SolanaProjectBrowser.tsx  TokenInfo.tsx  WalletConnect.tsx  WalletDashboard.tsx  date-time-picker.tsx  image-uploader.tsx  sdg-selector.tsx
app/src/hooks/: useAnectosProgram.ts  useDiscussions.ts  useGovernance.ts  useNFTMinting.ts  useProfile.ts  useProposals.ts  useUserRole.ts
app/src/lib/: constants.ts  governance-demo.ts  governance-integration.ts  governance.ts  (+13 more)
programs/anectos/: Cargo.toml  TEST_DOCUMENTATION.md
programs/anectos/src/: constants.rs  error.rs  lib.rs  state.rs
programs/anectos/src/instructions/: change_project_funding_stage.rs  close_round.rs  complete_milestone.rs  contribute.rs  create_project.rs  create_round_vault.rs  distribute_funds_to_owner.rs  fund_project_pool.rs  fund_round_pool.rs  initialize_funding_round.rs  mod.rs  set_area_max.rs  set_matching_pool.rs  settle_matching_for_project.rs  update_funding_stage_status.rs  update_project_whitelist.rs
programs/anectos/tests/: integration_test.rs
runbooks/: README.md
runbooks/deployment/: main.tx  subgraphs.localnet.tx
tests/: anectos.ts  anectos_project.ts
(+46 files in other folders)
