[package]
name = "anectos"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anectos"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
mpl-token-metadata = "4.1.2"
spl-token = "4.0"
